--- a/main.css
+++ b/main.css
@@ -17,44 +17,53 @@ h1, h2, h3 {
 
 aside {
 	position: fixed;
-	left: 800px;
+	right: 150px;
 	top: 15%;
 	float: right;
 	width: 20%;
 }
 
 footer {
-
+	clear: both;
+	font-size: small;
 }
 
 header {
-
+	position: fixed;
+	width: 100%;
+	top: -20px;
+	left: 20px;
 }
 
 img {
-	max-width: 75%;
+	max-width: 60%;
+	overflow: hidden;
 }
 
 main {
 	position: fixed;
 	left: 200px;
 	top: 15%;
-	width: 40%;
-
+	width: 42%;
+	
 }
 
 nav {
-
+	margin: 0;
+	padding: 0;
+	width: 25%;
 }
 
 #copyright {
-	
+	position: fixed;
+	width: 100%;
+	bottom: 2px;
 }
 
 #main-container {
 	position: fixed;
-	left: 50px;
+	left: 20px;
 	top: 15%;
 	float: left;
-	width: 20%;
+	width: 50%;
 }
